# render_explore_by_opengl

./: CMakeLists.txt  README.md
CMake/: set_variable.cmake
dependency/assimp/include/assimp/: revision.h
dependency/glad/include/glad/: glad.h
dependency/glad/src/: glad.c
include/learnopengl/: animation.h  animator.h  animdata.h  assimp_glm_helpers.h  bone.h  camera.h  entity.h  mesh.h  model.h  model_animation.h  shader.h  shader_c.h  shader_m.h  shader_s.h  shader_t.h
include/log/: mylog.h
src/: 1.model_loading.fs  1.model_loading.vs  CMakeLists.txt  ball.fbx  main.cpp  skybox.vs
